# render_latex

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
input/: sample.tex
render_latex/: __init__.py  __main__.py  cli.py  config.py  engine.py
tests/: __init__.py  test_cli.py  test_engine.py  test_integration.py
